# ha-rs-btwattch2

./: LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/rs_btwattch2/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/rs_btwattch2/translations/: en.json  ja.json
