[project]
name = "ha-rs-btwattch2a"
version = "1.0.0"
description = "Home Assistant custom integration for RATOC Systems RS-BTWATTCH2 Bluetooth power monitor"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = []
keywords = ["home-assistant", "bluetooth", "power-monitor", "rs-btwattch2", "ratocsystems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "homeassistant>=2024.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/rs_btwattch2"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.rs_btwattch2"]
